2007-07-15  Luca Bruno  <lethalman88@gmail.com>

	* src/SConscript: let it work on MacOSX (PPC)

	* plugins/gtk/SConscript: do not compile GTK if it's not found

	* st/kernel/Character.st: applied Sam Philips's patch that covers more ANSI

	* st/kernel/Number.st (reciprocal): added
	(asFraction): added
	(compare:): added

	* st/kernel/Integer.st (gcd:): added

	* st/kernel/Fraction.st (reduce): added
	(+): added
	(-): added
	(*): added
	(/): added
	(reciprocal): added refinement
	(compare:) added
	(<, >, <=, >=, =, ~=): added
	(zero): added

	* syx/syx-memory.c (syx_memory_gc_end): fixed GC transactions ending
	(syx_memory_gc): save/restore GC transaction state to hold #finalize messages

	* syx/syx-lexer.c (_syx_lexer_token_number): fixed small integer parsing

2007-07-14  Luca Bruno  <lethalman88@gmail.com>

	* st/kernel/LargeInteger.st (/): added
	(//): added
	(quo:): added

	* st/kernel/Number.st (//): added
	(quo:): refined

	* st/kernel/Float.st (/): added
	(floor): added
	(ceiling): added

	* st/kernel/Integer.st (radix:): added
	(printString): added

	* syx/syx-primitives.c (SmallInteger_div): added overflow check

	* syx/syx-types.h (SYX_SMALL_INTEGER_DIV_OVERFLOW): added

	* syx/syx-lexer.c (_syx_char_is_binary_second): fixed '-' character from being used as second char for binary messages (e.g 4/-3 should be handled as 4 / -3)

	* st/kernel/SmallInteger.st (/): added
	
	* st/kernel/Fraction.st: added
	(asFloat): added

2007-07-13  Luca Bruno  <lethalman88@gmail.com>

	== Released 0.1.2 version ==

	* syx/syx-memory.c (GC transactions): use multiple-level transactions

	* st/kernel/Float.st (truncated): added

	* st/kernel/SmallInteger.st (quo:): added and remove #/ fake

2007-07-12  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-primitives.c (Object_at_put): prevent from modifying constant literals
	(ByteArray_at_put): idem

	* syx/syx-object.h (struct SyxObject): added is_constant flag

	* st/kernel/Number.st (to:by:reverseDo:): added
