@@ -37,6 +37,16 @@
 
 #define SYX_VERSION "0.1.3"
 
+/* Byte swapping */
+
+#ifdef HAVE_BYTESWAP_H
+#define syx_bswap_32(x) bswap_32(x)
+#else
+#define syx_bswap_32(x)					     \
+  ((((x) & 0xff000000) >> 24) | (((x) & 0x00ff0000) >> 8) |  \
+   (((x) & 0x0000ff00) << 8) | (((x) & 0x000000ff) << 24))
+#endif /* HAVE_BYTESWAP_H */
+
 /* Some platform specific informations */
 
 #ifdef WINDOWS
